--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ SMTP_SERVER=smtp.example.com
 SMTP_FROM_ADDR=test@example.com
 SMTP_TO_ADDR=test@example.com
 MONITORING_FOLDER_PATH=Inbox,File Handling - All,Filing Accepted / Notification of Service / Courtesy Copy
+CERT_PRIVATE_KEY_PATH=
